Bug 113537 - EDITING: Sorting with autofilter slower than it used to be
Summary: EDITING: Sorting with autofilter slower than it used to be
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:6.1.0 target:6.0.0.1 target:5.4.5
Keywords: bibisected, bisected, perf, regression
: 114461 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-30 21:10 UTC by Telesto
Modified: 2017-12-18 18:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (14.93 KB, text/plain)
2017-10-30 21:12 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-10-30 21:10:34 UTC
Description:
EDITING: Sorting with autofilter slower than it used to be

Steps to Reproduce:
1. Open attachment 137373 [details] bug 113480
2. Expand the autofilter for D1
3. Deselect Bibs & press OK -> it takes 5 seconds or so; should be instant

Actual Results:  
it takes 5 seconds or so

Expected Results:
should be instant


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.0.0.0.alpha1+
Build ID: d30522e46ca884e9bc74af21711d9537e8118859
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-29_23:13:14
Locale: nl-NL (nl_NL); Calc: C

and in
LibO 5.4.0.3


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Telesto 2017-10-30 21:12:28 UTC Comment hidden (obsolete)
Comment 2 Xisco Faulí 2017-10-31 07:22:33 UTC
Regression introduced by:

author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2017-04-09 20:13:24 (GMT)
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2017-04-10 22:34:47 (GMT)
commit eefe13c77d01be37c911e75af191717a944fedb3 (patch)
tree 1c4d7e9e698446e95ce9c63ecaf65474e0303913
parent 091a0dd416171393d939aac924433063a68967b0 (diff)
shrinking the DB area just causes problems, tdf#89546

Bisected with: bibisect-linux-64-5.4

Adding Cc: to Markus Mohrhard
Comment 3 Eike Rathke (retired, only occasionally showing up) 2017-12-14 17:23:54 UTC
The anonymous database-range is setup as Categories.A1:Categories.AC1048576 i.e. one million rows.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2017-12-14 17:25:26 UTC
*** Bug 114461 has been marked as a duplicate of this bug. ***
Comment 5 Eike Rathke (retired, only occasionally showing up) 2017-12-14 17:26:56 UTC
Taking.
Comment 6 Commit Notification 2017-12-15 16:09:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa100e0abc83b876ca18b4178c44fb1dfc452a5d

Resolves: tdf#113537 don't keep nEndRow=MAXROW if data ends above

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2017-12-15 16:21:13 UTC
Pending Jenkins/review
https://gerrit.libreoffice.org/46565 for 6-0
https://gerrit.libreoffice.org/46566 for 5-4
Comment 8 Commit Notification 2017-12-15 18:35:50 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1aa8011d9186dc4d221469058a9fcaf5a93ae765&h=libreoffice-6-0

Resolves: tdf#113537 don't keep nEndRow=MAXROW if data ends above

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-12-18 18:17:20 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee872acfe6ae0e2fd59f2e9b5e3cecdccbae21c7&h=libreoffice-5-4

Resolves: tdf#113537 don't keep nEndRow=MAXROW if data ends above

It will be available in 5.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.