Resolves: tdf#113537 don't keep nEndRow=MAXROW if data ends above

Change-Id: I186034cada9718c067fa4dc7f72e2ca55ac06f83
(cherry picked from commit fa100e0abc83b876ca18b4178c44fb1dfc452a5d)
Reviewed-on: https://gerrit.libreoffice.org/46565
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>